--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@ Baud:
 <datalist id="baudList">
     <option value="4800">4800</option>
     <option value="9600">9600</option>
-    <option value="14400">14400</option>
     <option value="19200">19200</option>
     <option value="38400">38400</option>
     <option value="57600">57600</option>
     <option value="115200">115200</option>
-    <option value="128000">128000</option>
-    <option value="256000">256000</option>
 </datalist>
 
 <hr>
@@ -45,12 +42,13 @@ Status:
             <button class="z-down" onclick="move('zDown')">↓ Z-</button>
         </div>
         <br>
-        <div class="step-size-input">
-            <label for="step-size">Step Size:</label>
-            <input type="number" id="step-size" name="step-size" value="1" min="0.1" step="0.1">
-            <label>mm</label>
-        </div>
-
+        <label>Step Size:</label>
+        <input type="number" id="step-size" name="step-size" value="1" min="0.1" step="0.1">
+        <label>mm</label>
+        <br>
+        <label>Feed Rate:</label>
+        <input type="number" id="feed-rate" name="feed-rate" value="1000" min="100" step="1">
+        <br>
         Controller State
         <div class="controller-state" id="controller-state">
             Current Position: (0, 0, 0)
